--- a/store/app/design/frontend/icu/icu/template/catalog/product/list.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/list.phtml
@@ -105,7 +105,7 @@
 			echo ucwords($this->helper('catalogSearch')->getEscapedQueryText()); 
 		}else{ 
 			if(strtoupper($category->getName()) == strtoupper("ladies") || strtoupper($category->getName()) == strtoupper("gentlemen")){
-				echo strtoupper("accessorize your style");
+				echo strtoupper("shop icu");
 			}else{
 				echo strtoupper($category->getName());
 			}
