--- a/store/skin/frontend/icu/icu/css/style.css
+++ b/store/skin/frontend/icu/icu/css/style.css
@@ -621,14 +621,28 @@ body {
 input[type="button"].btn01 {margin:0; padding:0; width:160px; height:30px; background:url(../images/btn-01.gif) no-repeat top; border:none; font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#FFFFFF; text-transform:uppercase; cursor:pointer;}
 
 
-
-input[type="submit"].btn01 {margin:0; padding:0; width:160px; height:30px; background:url(../images/btn-01.gif) no-repeat top; border:none; font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#FFFFFF; text-transform:uppercase; cursor:pointer;}
-
-
-
-input[type="button"].btn02 {margin:0; padding:0; width:130px; height:30px; background:url(../images/btn-02.gif) no-repeat top; border:none; font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#FFFFFF; text-transform:uppercase; cursor:pointer;}
-
-input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; background:url(../images/btn-03.gif) no-repeat top; border:none; font-family:Arial, Helvetica, sans-serif; font-size:9px; color:#000000; text-transform:uppercase; cursor:pointer;}
+.icu-btn{
+	background-color: #84BCBC;
+	font-family: "Gotham-Light", sans-serif;
+	text-transform: uppercase;
+	font-size: 2.0em;
+	margin: 10px;
+	padding: 20px;
+	color: white;
+	border: none;
+}
+input[type="submit"].btn01 {
+	margin:0; 
+	padding:0; 
+	width:160px; 
+	height:30px; 
+	background:url(../images/btn-01.gif) no-repeat top; 
+	border:none; 
+	font-family:Arial, Helvetica, sans-serif; 
+	font-size:11px; color:#FFFFFF; 
+	text-transform:uppercase; 
+	cursor:pointer;
+}
 
 
 
@@ -926,8 +940,7 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 
 	#pro_des_section {
 		margin:0 0 0 0; 
-		padding:15px 0 0 43px; 
-		width:419px; 
+
 		height:auto; 
 		float:right;
 	}
@@ -994,7 +1007,16 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 
 	#pro_des_section p {font:normal 12px/16px Arial, Helvetica, sans-serif; color:#000000;}
 
-	#pro_des_section input[type="text"] {margin:0; padding:0; width:auto; height:auto; border:1px solid #000000; background:none; font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#000000; text-align:center;}
+	#pro_des_section input[type="text"] {
+
+	background-color: #E6E6E6;
+	border-radius: 0;
+	margin: 5px;
+	padding: 10px;
+	border: none;
+	box-shadow: none;
+		text-align:center;
+	}
 
 	.shippingtitle {font:"GeosansLight"; color:#000000;}
 
@@ -1173,15 +1195,6 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 	#share ul li img {margin:6px 0;}
 
 
-	/* newsletter */
-
-	#newsletter {margin:0; padding:0; width:395px; height:auto; float:left; font:normal 17px/30px "GeosansLight"; color:#000000;}
-
-	#newsletter span.fio_txt {font:normal 29px/30px "Fiolex Girls"; color:#000000;}
-
-	#newsletter input[type="text"] {margin:0; padding:2px 4px; width:170px; height:auto; background-color:#f7f7f7; border:1px solid #bcbcbc; font-family:Arial, Helvetica, sans-serif; color:#bcbcbc; font-size:11px;}
-
-	#newsletter input[type="text"]:focus {border:1px solid #999999; color:#999999;}
 
 	/* copyright */
 
@@ -1804,8 +1817,24 @@ input[type="button"].btn03 {margin:0; padding:0; width:110px; height:23px; backg
 		padding:0;
 		color:#fff;
 	}
+#product_info.nav li{
+	border: none;
 
-
+}
+#product_info a{
+	font-family: "Gotham-Light", sans-serif;
+	font-weight: bold;
+	font-size: 1.3em;
+	color: black;
+	text-transform: uppercase;
+	border-radius: 0;
+}
+.nav-pills > .active > a, 
+.nav-pills > .active > a:hover, 
+.nav-pills > .active > a:focus {
+  background-color: #fff;
+  border-bottom: 3px solid #ccc;
+}
 	.product_popup {margin:0; padding:0; width:425px; height:520px;}
 
 	.product_desc {margin:0; padding:0; width:300px; height:auto; float:left;}
